--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,1 +1,37 @@
-<チャット画面>
+-# <チャット画面>
+.main-chat
+  .main-chat__header
+    .main-chat__header__top-group
+      .group-name
+        test
+      .group-member
+        Member : masa
+    .main-chat__header__edit-btn
+      = link_to "#", class: "edit-btn" do
+        Edit
+
+  .main-chat__main
+    .main-chat__main__message
+      .message-name
+        masa
+      .message-date
+        2019/11/20(Wed) 17:43:01
+    .main-chat__main__message-text
+      こんにちわ
+    .main-chat__main__message
+      .message-name
+        masa
+      .message-date
+        2019/11/20(Wed) 17:43:34
+    .main-chat__main__message-text
+      今日は夜から雨
+
+  .form
+    .form__new-message
+      .input-box
+        %input{type: "text", class: "input-box__text" , placeholder: "type a message"}
+        %label{type: "image", class: "input-box__image", for: "image"}
+          = icon('fas', 'image')
+          %input{type: "file", id: "image"}
+      .submit
+        %input{type: "submit", class: "submit-btn", value: "SEND", name: "commit"}
