--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -3,12 +3,12 @@
   .side-bar__header
     .side-bar__header__top-items
       .side-bar__header__top-items__name
-        masa
+        = current_user.name
       .side-bar__header__top-items__icons
         = link_to "#", class: "contents__btn" do
           = icon('far', 'edit')
-        = link_to "#", class: "contents__btn" do
-          = icon('fas', 'cog')
+        = link_to edit_user_path(current_user) do
+          = icon('fas', 'cog', class: 'icon')
 
   .side-bar__main
     .side-bar__main__top-group
