--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,15 +5,18 @@
       .side-bar__header__top-items__name
         = current_user.name
       .side-bar__header__top-items__icons
-        = link_to "#", class: "contents__btn" do
+        = link_to new_group_path do
           = icon('far', 'edit')
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class: 'icon')
 
   .side-bar__main
-    .side-bar__main__top-group
-      techcamp
-    .side-bar__main__top-message
-      まだメッセージがありません
+    - current_user.groups.each do |group|
+      .group
+        = link_to '#' do
+          .side-bar__main__top-group
+            = group.name
+          .side-bar__main__top-message
+            まだメッセージがありません
 
 
