--- a/app/assets/stylesheets/modules/_main-chat.scss
+++ b/app/assets/stylesheets/modules/_main-chat.scss
@@ -37,6 +37,8 @@
   &__main{
     background-color: #fafafa;
     height:calc(100vh - 190px);
+    overflow: scroll;
+    
     &__message{
       padding-top: 35px;
       margin-left: 40px;
