change(js, scss, haml)(2)

--- a/app/assets/stylesheets/modules/_main-chat.scss
+++ b/app/assets/stylesheets/modules/_main-chat.scss
@@ -67,6 +67,9 @@
     &__message-text{
       font-size: 14px;
       color:#434A54;
+      padding-left: 20px;
+    }
+    &__message-image{
       padding-left: 40px;
     }
   }
